[package]
name = "alloc-track"
version = "0.2.2"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/alloc-track"
description = "Track memory allocations by backtrace or originating thread"
keywords = [ "memory", "alloc", "trace", "segmentation", "leak" ]

[dependencies]
dashmap = "5.3"
libc = "0.2"
procfs = "0.14"
lazy_static = "1.4"
backtrace = { version = "0.3", optional = true }

[features]
default = ["backtrace"]