[package]
name = "alloc-track"
version = "0.3.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/alloc-track"
description = "Track memory allocations by backtrace or originating thread"
keywords = [ "memory", "alloc", "trace", "segmentation", "leak" ]

[dependencies]
dashmap = "5.3"
lazy_static = "1.4"
backtrace = { version = "0.3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }
procfs = { version = "0.14", optional = true }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.44.0", features = ["Win32_System_Threading", "Win32_Foundation","Win32_System_Diagnostics_ToolHelp"], optional = true }

[features]
fs = ["procfs", "libc", "windows"]
default = ["backtrace", "fs"]
